<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RedHelp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="app_id">459378604164557</string>
    <string name="google_places_key">AIzaSyAXWq62V9BYWUewXg3hSEY6xxFpuFjEDJM</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_name_hint">Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_phoneno_hint">Contact number (optional)</string>

    <string name="blood_type">Blood Type </string>
    <string name="birth_date">Birth Date </string>
    <string name="birth_date_prompt">Pick birthdate </string>
    <string name="gender">Gender </string>
    <string name="blood_type_prompt">Choose Blood Type</string>
    <string name="donation_freq_prompt">Choose your donation frequency</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string-array name="blood_type_arrays">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string-array name="states_array">
        <item>Delhi</item>
        <item>Punjab</item>
        <item>Haryana</item>
        <item>UP</item>
        <item>Uttrakhand</item>
        <item>Madhaya Pradesh</item>
        <item>Rajasthan</item>
        <item>Bihar</item>
        <item>Manipur</item>
        <item>Maharashtra</item>
        <item>Kerala</item>
        <item>Karnataka</item>
        <item>Jharkhand</item>
        <item>Jammu and Kashmir</item>
        <item>Himachal Pradesh</item>
        <item>Haryana</item>
        <item>Gujarat</item>
        <item>Chhattisgarh</item>
        <item>Assam</item>
        <item>Arunachal Pradesh</item>
        <item>Andra Pradesh</item>
        <item>Meghalaya</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="freq_array">
        <item>Frequent</item>
        <item>Once or twice</item>
        <item>Never</item>
    </string-array>

    <!-- Sliding menu strings -->
    <string name="menu_home_slidingmenu">Home</string>
    <string name="myaccount_slidingmenu">My Account</string>
    <string name="bloodprofile_slidingmenu">Blood Profile and History</string>
    
    
    <!-- Blood profile tabs strings -->
    <string name="bloodrequests_blood_profile_tabs">Blood requests</string>
    <string name="messages_blood_profile_tabs">Messages</string>
    <string name="awards_blood_profile_tabs">Awards</string>
    <string name="location_blood_profile_tabs">Location</string>

    <string name="phone_number_create_blood_profile">Phone number: </string>
    <string name="patient_name_create_blood_profile">Patient name: </string>
    <string name="select_blood_group_create_blood_request">Select blood group(Can select multiple): </string>
    
    
    
    
<!-- Toast messages -->
    <string name="toast_server_error">Oops.. Bits and Bytes are messing up, please try again later.</string>
    <string name="toast_register_successful">You have been successfully registered, Start donating now.</string>
    <string name="toast_network_error">Oops.. Your network is down, please check your internet connection.</string>
    <string name="toast_duplicate_email_fb">Oops.. Seems like you have already registered with this email, Try logging in via Fb</string>
    <string name="toast_duplicate_email">Oops.. Seems like you have already registered with this email, Try logging in via email</string>
    <string name="toast_invalid_login">Login unsuccessful, Invalid email or password. </string>
    <string name="toast_bloodprofile_updated">Your blood profile has been updated.</string>
    <string name="toast_bloodrequest_created">Blood request created.</string>
    <string name="str_atv_places">Enter your location</string>
    <string name="str_call_event_layout">Call</string>
    <string name="str_attend_view_event">Attend</string>
    <string name="str_navigate_view_event">Navigate</string>
    <string name="str_volunteer_view_event">Volunteer</string>
    <string name="str_date_time__view_event_layout">Date and Time</string>
    <string name="toast_too_many_users">Sorry, Too many users have registered for this event, you can still visit this event.</string>
    <string name="toast_already_registered">You have already registered for this event !</string>




    <string name="point_number_x">Point #%1$s</string>
    <string name="including_two_toasters">%1$s (including Your Current Location)</string>
</resources>
