<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/REDHELP_BACKGROUND_GREY">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:layout_weight="3"
                android:text="@string/blood_type" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text=":"/>

            <Spinner
                android:id="@+id/sp_bloodtype_createbloodprofile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="left|center"
                android:entries="@array/blood_type_arrays"
                android:prompt="@string/blood_type_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="City" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text=":"/>

            <org.redhelp.customviews.CustomAutoCompleteTextView
                android:id="@+id/atv_location_createbloodprofile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:background="@drawable/edit_text_selector"
              />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_phone_no_create_bp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center"
                android:text="Phone number" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text=":"/>

            <EditText
                android:id="@+id/et_phoneno_createbloodprofile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="left|center"
                android:paddingLeft="5dp"
                android:inputType="phone"
                android:background="@drawable/edit_text_selector"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center_vertical"
                android:text="@string/birth_date" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center"
                android:text=":"/>

            <Button
                android:id="@+id/bt_birthdate_createbloodprofile"
                android:layout_width="0dp"
                android:layout_weight="4"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/birth_date_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="left|center_vertical"
                android:text="@string/gender" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text=":"/>

            <RadioGroup
                android:id="@+id/rgb_sex_createbloodprofile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="left|center_vertical"
                android:layout_weight="4"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/rb_male_createbloodprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:gravity="left|center"
                    android:text="@string/radio_male" />

                <RadioButton
                    android:id="@+id/rb_female_createbloodprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_female" />
            </RadioGroup>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp">
        <Button
            android:id="@+id/btn_Done_after_screen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Done"
            android:background="@drawable/button_red_white_selector"
            android:textColor="@drawable/text_color_red_white_selector"/>

    </LinearLayout>

</LinearLayout>